--- a/www/templates/aboutus.html
+++ b/www/templates/aboutus.html
@@ -1,7 +1,7 @@
 <ion-view view-title="About Us">
     <ion-content class="padding">
         <div class="incard">
-            <div class="prod-info">
+            <div class="prod-info about">
 <p>Barter is perhaps the words oldest system of trade. We all have heard and studied in school about how people used to barter for sustenance before the advent of money, the currency.</p>
 <p>One Stop Barter advocates the age old Barter system to be used by corporate /individual business for mutual win-win deals.</p>
 <p>One Stop Barter has built its impeccable reputation on solid financials, ethical and vigilant trading practices and creating barter system that’s designed to help its members thrive. One Stop Barter’s vast and growing network of active members sets One Stop Barter apart in an important way: Bartering is not a hit or miss proposition. You will find what you need when You need it—and you’ll find endless opportunities to market your own goods and services to new customers and untapped markets. </p>
