--- a/www/templates/addbalance.html
+++ b/www/templates/addbalance.html
@@ -50,7 +50,7 @@
                         <input type="text" ng-model="add.amount" class="disable" disabled>
                     </label>
 -->
-                    <div class="padding-horizontal text-center">
+                    <div class="padding-horizontal text-center p15">
                         <button class="button pr-button button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);">Add Balance</button>
                         <!--                        <button class="button button-block button-balanced" type="submit" ng-click="topayment()">Add Balance</button>-->
                     </div>
