--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -45,7 +45,7 @@
                 </ion-item>
             </div>
 
-            <div class="padding-horizontal text-center" ng-controller="YourBalCtrl">
+            <div class="padding-horizontal text-center p15" ng-controller="YourBalCtrl">
                 <button class="button button-balanced pr-button" ng-click="openedit();">
                     Add Balance
                 </button>
@@ -105,7 +105,7 @@
                         <input type="text" id="normal-field" ng-model="product.membershipno">
                     </div>
                 </div>
-                <div class="padding-horizontal text-center p20">
+                <div class="padding-horizontal text-center p20 p15">
                     <!--                    <button class="button button-block button-outline button-balanced" ng-click="memfunc(home);">Search</button>-->
                     <button class="button button-balanced pr-button" ng-click="searchproduct(product);">Search</button>
                 </div>
@@ -154,7 +154,7 @@
                         <input type="text" id="normal-field" ng-model="home.membershipno">
                     </div>
                 </div>
-                <div class="padding-horizontal text-center">
+                <div class="padding text-center">
                     <button class="button button-balanced pr-button" ng-click="memfunc(home);">Search</button>
                 </div>
 <!--
