--- a/www/templates/orders.html
+++ b/www/templates/orders.html
@@ -29,11 +29,16 @@
                     <h3 class="leftnames">Transaction ID: <span>{{o.transactionid}}</span></h3>
                 </div>
 -->
-                <div class="text-center royal padding" ng-if="mypurchase.length==0">
-                    <figure>
-                        <img src="img/nopr.jpg" class="full-image" style="width:110px;">
 
-                    </figure>
+            </div>
+            <div class="incard" ng-if="mypurchase.length==0">
+                <div class="list">
+                    <div class="text-center royal padding" >
+                        <figure>
+                            <img src="img/nopr.jpg" class="full-image" style="width:110px;">
+
+                        </figure>
+                    </div>
                 </div>
             </div>
 
