--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -100,7 +100,7 @@
                      </div>
 
                 <div class="padding text-center p20">
-                    <button class="button pr-button button-assertive" ng-click="openPassword();">Reset Password</button>
+                    <button class="button pr-button button-balanced" ng-click="openPassword();">Reset Password</button>
                 </div>
             </div>
         </div>
