--- a/www/templates/resetpswd.html
+++ b/www/templates/resetpswd.html
@@ -18,8 +18,8 @@
                     <div class="item item-input">
                         <input type="password" placeholder="Confirm Password*" ng-model="pass.confirmpassword" ng-class="allvalidation[2].validation" required>
                     </div>
-                    <div class="padding-horizontal btn-rest">
-                        <button class="button button-block button-balanced" ng-click="changepass();" type="submit">Submit</button>
+                    <div class="padding-horizontal btn-rest text-center p15">
+                        <button class="button pr-button button-balanced" ng-click="changepass();" type="submit">Submit</button>
                     </div>
                 </div>
             </form>
