--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -25,7 +25,7 @@
                 </ion-item>
             </ion-list>
         </div>
-        <div class="incard">
+        <div class="incard search-offline">
             <ion-list class="lesspadding" ng-if="shops.length>0">
                 <ion-item class="headed">
                     <div class="row">
