--- a/www/templates/selling.html
+++ b/www/templates/selling.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Selling Approval">
 
     <ion-content class="padding">
-<div class="incard">
+<div class="incard" ng-if="req.length==0">
         <div class="list">
-             <div class="text-center royal padding" ng-if="req.length==0">
+             <div class="text-center royal padding" >
                     <figure>
                         <img src="img/noap.jpg" class="full-image" style="width:110px;">
 
