--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -88,6 +88,11 @@ ul {
     min-height: 32px;
     font-size: 13px;
 }
+//.bar{
+//    .title{
+//        text-align: left;
+//    }
+//}
 .tb-button {
     line-height: 38px;
     min-height: 40px
@@ -116,8 +121,17 @@ ul {
 }
 .incard {
     p{
-         padding: 17px 0px 6px 0px;
+    padding: 13px 0 6px;
     font-size: 13px;   
     }
 
+}
+.image-modal{
+    .slider-slide {
+
+    height: 250px;
+    vertical-align: top;
+    top: 50%;
+    max-height: 400px;
+}
 }
