--- a/www/templates/modal-form.html
+++ b/www/templates/modal-form.html
@@ -54,8 +54,8 @@
                     </div>
                 </form>
             </div>
-            <div class="padding">
-                <button class="button button-block button-royal" ng-click="buyproduct(form);">
+            <div class="padding text-center p15">
+                <button class="button pr-button button-royal" ng-click="buyproduct(form);">
                     Submit &amp; Buy
                 </button>
             </div>
