--- a/www/templates/product.html
+++ b/www/templates/product.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="padding-horizontal text-center">
+            <div class="padding p15 text-center">
                 <a class="button pr-button button-balanced" ng-click="searchproduct(product);">Search</a>
             </div>
         </div>
