--- a/www/templates/myproducts.html
+++ b/www/templates/myproducts.html
@@ -23,7 +23,7 @@
                 </a>
 -->
                 </div>
-                <div class="padding text-center">
+                <div class="padding text-center p15">
                     <button class="button pr-button button-balanced" ng-click="openedit();">Add More Products</button>
                 </div>
             </div>
