--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,10 +1,10 @@
 <ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-royal has-tabs-top">
+        <ion-nav-bar class="bar-balanced has-tabs-top">
             <ion-nav-back-button>
             </ion-nav-back-button>
             <ion-nav-buttons side="left">
-                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left" ng-click="getNotificationCount();">
                 </button>
             </ion-nav-buttons>
         </ion-nav-bar>
@@ -37,7 +37,7 @@
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.selling" >
                       <i class="icon ln-tags side-menu-i"></i>
                     <span>Selling Approvals</span>
-                    <span ng-hide="approvalcount==0" class="badge badge-assertive">{{approvalcount}}</span>
+                    <span ng-hide="approvalcount==0" class="badge badge-balanced">{{approvalcount}}</span>
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.transaction">
                       <i class="icon ln-cash side-menu-i"></i>
@@ -46,12 +46,13 @@
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.events" >
                       <i class="icon ln-calendar2 side-menu-i"></i>
                     <span>Events</span>
-                </ion-item> 
+                </ion-item>
                    <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.notification" >
                          <i class="icon ln-bell side-menu-i"></i>
                     <span>Notification</span>
+                      <span class="badge badge-balanced">{{notiCount}}</span>
                 </ion-item>
-                <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.aboutus">
+                <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.about">
                       <i class="icon ln-clipboard side-menu-i"></i>
                     <span>About Us</span>
                 </ion-item>
