--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="true">
 
-    <ion-header-bar class="bar-royal">
+    <ion-header-bar class="bar-balanced">
         <div class="buttons button-left">
             <button class="button button-icon ion-navicon no-hide" menu-toggle="left">
             </button>
