--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,30 +18,30 @@
             <ion-list class="menus">
                 <ion-item nav-clear menu-close  ui-sref-active="actives" ui-sref="app.home" ng-click="homecall();">
                       <i class="icon ln-home3 side-menu-i"></i>
-                    <span>Home</span>
+                  Home
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.profile" >
                       <i class="icon ln-user side-menu-i"></i>
-                    <span>My Profile</span>
+                  My Profile
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.myproducts" >
                       <i class="icon ln-cube side-menu-i"></i>
-                    <span>My Products</span>
+                   My Products
                 </ion-item>
 
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.orders" >
                       <i class="icon ln-cart-full side-menu-i"></i>
-                    <span>Orders</span>
+                    Orders
                 </ion-item>
 
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.selling" >
                       <i class="icon ln-tags side-menu-i"></i>
-                    <span>Selling Approvals</span>
+                    Selling Approvals
                     <span ng-hide="approvalcount==0" class="badge badge-balanced">{{approvalcount}}</span>
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.transaction">
                       <i class="icon ln-cash side-menu-i"></i>
-                    <span>Transaction History</span>
+                   Transaction History
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.events" >
                       <i class="icon ln-calendar2 side-menu-i"></i>
@@ -49,20 +49,20 @@
                 </ion-item>
                    <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.notification" >
                          <i class="icon ln-bell side-menu-i"></i>
-                    <span>Notification</span>
-                      <span class="badge badge-balanced">{{notiCount}}</span>
+                    Notification
+<!--                      <span class="badge badge-balanced">{{notiCount}}</span>-->
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.about">
                       <i class="icon ln-clipboard side-menu-i"></i>
-                    <span>About Us</span>
+                    About Us
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.faq" >
                       <i class="icon ln-question side-menu-i"></i>
-                    <span>FAQ</span>
+                   FAQ
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="login" ng-click="logoutfunction();">
                       <i class="icon ln-arrow-right side-menu-i"></i>
-                    <span>Logout</span>
+                    Logout
                 </ion-item>
                 </div>
             </ion-list>
