--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -50,7 +50,7 @@ body {
             i {
                 font-size: 18px;
                 font-weight: 400;
-                padding-right: 11px;
+                padding-right: 8px;
                 color: $icon;
             }
         }
@@ -62,7 +62,7 @@ body {
     }
 }
 .balance {
-    padding-right: 30px;
+    padding-right: 28px;
     .label-name {
         font-size: 13px;
     }
@@ -80,7 +80,7 @@ ul {
         text-align: center;
     }
     li {
-        padding: 2px 15px 10px 15px;
+        padding: 2px 10px 10px;
     }
 }
 .pr-button {
@@ -120,18 +120,24 @@ ul {
     margin-top: 20px;
 }
 .incard {
-    p{
-    padding: 13px 0 6px;
-    font-size: 13px;   
+    p {
+        padding: 13px 0 6px;
+        font-size: 13px;
     }
-
 }
-.image-modal{
+.image-modal {
     .slider-slide {
-
-    height: 250px;
-    vertical-align: top;
-    top: 50%;
-    max-height: 400px;
+        height: 250px;
+        vertical-align: top;
+        top: 50%;
+        max-height: 400px;
+    }
 }
+.menus {
+    .badge {
+        padding: 2px 7px;
+        border-radius: 10px;
+        right: 8px;
+        font-size: 11px;
+    }
 }
