--- a/www/templates/addbalance.html
+++ b/www/templates/addbalance.html
@@ -31,12 +31,12 @@
                            <p class="addb-p">Sell Value</p> 
                         </div>
                     </div>
-                    <div class="row pad">
-                        <div class="col">
-                            <input type="text" ng-model="add.amount" class="disable" disabled>
+                    <div class="row ">
+                        <div class="col-50">
+                            <div class="space"> <input type="text" ng-model="add.amount" class="disable" disabled></div>
                         </div>
-                        <div class="col">
-                            <input type="text" ng-model="add.amount" class="disable" disabled>
+                        <div class="col-50">
+                            <div class="space"> <input type="text" ng-model="add.amount" class="disable" disabled></div>
                         </div>
                     </div>
 
