--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -42,7 +42,7 @@ body {
     .list {
         a {
             font-size: 12px;
-            font-weight: 400;
+            font-weight: 600;
             padding: 13px 2px 13px 14px !important;
             color: $icon-font;
             font-family: 'quicksand';
@@ -139,5 +139,12 @@ ul {
         border-radius: 10px;
         right: 8px;
         font-size: 11px;
+    }
+}
+
+.space {
+    margin:0 10px;
+    input{
+        width: 100%;
     }
 }
