--- a/www/templates/addbalance.html
+++ b/www/templates/addbalance.html
@@ -51,7 +51,7 @@
                     </label>
 -->
                     <div class="padding-horizontal text-center p15">
-                        <button class="button pr-button button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);">Add Balance</button>
+                        <button class="button pr-button button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);" ng-show="showAddBtn">Add Balance</button>
                         <!--                        <button class="button button-block button-balanced" type="submit" ng-click="topayment()">Add Balance</button>-->
                     </div>
 
