--- a/www/templates/purchase.html
+++ b/www/templates/purchase.html
@@ -7,9 +7,8 @@
     </ion-header-bar>
     <ion-content class="padding">
         <div class="incard">
-            <form >
+            <form>
                 <div class="list">
-                   
                     <label class="item item-input">
                         <span class="input-label">Sales Limit of Shop:</span> {{profile.salesbalance}}
                     </label>
@@ -18,14 +17,14 @@
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Amount:</span>
-                        <input type="number" maxlength="10" ng-model="send.amount">
+                        <input type="number" placeholder="Amount" maxlength="10" ng-model="send.amount" ng-class="allvalidation[0].validation" required>
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Reason:</span>
-                        <input type="text" maxlength="200" ng-model="send.reason">
+                        <input type="text" placeholder="Reason" ng-model="send.reason">
                     </label>
                     <div class="padding-horizontal">
-                        <button class="button button-block button-balanced" ng-show="showPurchaseBtn"  ng-click="sendamt(send.amount,send.reason);">Request</button>
+                        <button class="button button-block button-balanced" ng-show="showPurchaseBtn" ng-click="sendamt(send.amount,send.reason);">Request</button>
                     </div>
                 </div>
             </form>
