--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -1,5 +1,5 @@
 <ion-modal-view view-title="Add Balance">
-    <ion-header-bar class="bar-royal">
+    <ion-header-bar class="bar-balanced">
         <h1 class="title">Add Product</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeModal()">Close</button>
