--- a/www/templates/modal-sort.html
+++ b/www/templates/modal-sort.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-    <ion-header-bar class="bar-royal" align-title="center">
+    <ion-header-bar class="bar-balanced" align-title="center">
         <h1 class="title">Sort By</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closesort()">Close</button>
