--- a/www/templates/selling.html
+++ b/www/templates/selling.html
@@ -18,8 +18,9 @@
                 <ion-item class="item item-thumbnail-left item-text-wrap">
                     <div class="row">
                         <div class="col-25">
-                            <div class="sell-img">
-                                <img src="{{r.shoplogo|serverimage}}">
+                            <div class="">
+                                     <div class="img-hlodss" ng-style="{'background-image':'url({{r.shoplogo|serverimage}})'}"></div>
+                               
                             </div>
                         </div>
                         <div class="col-75" ng->
